add the categories in the template
make nevigation bar for categores in base.html
display the categories of each post in home.html

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -33,6 +33,11 @@
                                 <a target="blank" href="#!">Start Bootstrap</a> -->
                                 {{post.jpublish}}
                             </p>
+                            <div>
+                                {% for cat in post.category.all %}
+                                    <a href="#">#{{cat.title}}</a>
+                                {% endfor %}
+                            </div>
                         </div>
                     {% endfor %}
                     <!-- Divider-->
