make the Category URLs
add the blog Category url handler in urls.py
add a view handler for category page in view.py
add a category.html in blog template to render it by view
add the categories' links in the nav bar and the post's categories
make related_name in Post model for category property
display the posts list of a category in category.html

--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -1,6 +1,8 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block titile %} - {{category.title}}{% endblock %}
+
 {% block main %}
 
         <!-- Page Header-->
@@ -9,8 +11,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>وبلاگ من</h1>
-                            <!-- <span class="subheading">A Blog Theme by Start Bootstrap</span> -->
+                            <h1>{{ category.title }}</h1>
                         </div>
                     </div>
                 </div>
@@ -22,7 +23,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
-                    {% for post in posts %}
+                    {% for post in category.posts.all %}
                         <div class="post-preview">
                             <a target="balnk" href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
