fix display the inactive and unpublished items
add the PostManager and add a method to display only published posts
use published method in the views instead the filtering
display only published posts in category.html page
add the active_category method to display only active categories under the posts
display only active categories in the posts info in the admin panel

--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -23,7 +23,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
-                    {% for post in category.posts.all %}
+                    {% for post in category.posts.published %}
                         <div class="post-preview">
                             <a target="balnk" href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
