make a custom TemplateTags for category navbar
make a custom inclusion TemplateTag in base_tags.html
add the category navbar template in partial/category_navbar.html
use custom category navbar tag in base.html
delete categories parameter from rendering in views.py
fix display the category navbar in all pages (home, Post details, Categroy)

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load base_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,9 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:home' %}">خانه</a></li>
-                        {% for cat in categories %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:category' cat.slug %}">{{cat.title}}</a></li>
-                        {% endfor %}
+                        {% category_navbar %}
                     </ul>
                 </div>
             </div>
