fix some styles in template
fix the blog head name in category.html
add the category title in content of category.html
fix text-justify class in styles.css
make the Post's content justify in details.html

--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -11,7 +11,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>{{ category.title }}</h1>
+                            <h1>وبلاگ من</h1>
+                            <!-- <span class="subheading">A Blog Theme by Start Bootstrap</span> -->
                         </div>
                     </div>
                 </div>
@@ -22,6 +23,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
+                    <h3 class="alert alert-primary text-center">دسته بندی : {{ category.title }}</h3>
                     <!-- Post preview-->
                     {% for post in category.posts.published %}
                         <div class="post-preview">
