--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -7385,6 +7385,10 @@ textarea.form-control-lg {
   text-align: center !important;
 }
 
+.text-justify {
+  text-align: justify !important;
+}
+
 .text-decoration-none {
   text-decoration: none !important;
 }
