--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -25,7 +25,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <h3 class="alert alert-primary text-center">دسته بندی : {{ category.title }}</h3>
                     <!-- Post preview-->
-                    {% for post in category.posts.published %}
+                    {% for post in posts %}
                         <div class="post-preview">
                             <a target="balnk" href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
@@ -46,8 +46,14 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4 pager-button"><a class="btn btn-primary text-uppercase" href="#!">پست های قدیمی &larr;</a></div>
-                </div>
+                    <div class="d-flex justify-content-end mb-4 pager-button">
+                        {% if posts.has_previous %}
+                            <a class="btn btn-primary text-uppercase ms-3" href="{% url 'blog:category' category.slug posts.previous_page_number %}">پست های جدید &rarr;</a>
+                        {% endif %}
+                        {% if posts.has_next %}
+                            <a class="btn btn-primary text-uppercase" href="{% url 'blog:category' category.slug posts.next_page_number %}">پست های قدیمی &larr;</a>
+                        {% endif %}
+                    </div>
             </div>
         </div>
 
