add the PostList class views instead the home view function
remove the home view function
add the PostList class view in views.py
change the home function to PostList in urls.py
rename the home.html in template to post_list.html
change the contex names to the default names in post_list.html in template

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,7 +22,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
-                    {% for post in posts %}
+                    {% for post in object_list %}
                         <div class="post-preview">
                             <a target="balnk" href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
@@ -43,14 +43,16 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4 pager-button">
-                        {% if posts.has_previous %}
-                            <a class="btn btn-primary text-uppercase ms-3" href="{% url 'blog:home' posts.previous_page_number %}">پست های جدید &rarr;</a>
-                        {% endif %}
-                        {% if posts.has_next %}
-                            <a class="btn btn-primary text-uppercase" href="{% url 'blog:home' posts.next_page_number %}">پست های قدیمی &larr;</a>
-                        {% endif %}
-                    </div>
+                    {% if is_paginated  %}
+                        <div class="d-flex justify-content-end mb-4 pager-button">
+                            {% if page_obj.has_previous %}
+                                <a class="btn btn-primary text-uppercase ms-3" href="{% url 'blog:home' page_obj.previous_page_number %}">پست های جدید &rarr;</a>
+                            {% endif %}
+                            {% if page_obj.has_next %}
+                                <a class="btn btn-primary text-uppercase" href="{% url 'blog:home' page_obj.next_page_number %}">پست های قدیمی &larr;</a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
