--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,18 +1,18 @@
 {% extends 'blog/base.html' %}
 
 
-{% block titile %} - {{post.title}}{% endblock %}
+{% block titile %} - {{object.title}}{% endblock %}
 
 {% block main %}
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('{{post.thumbnail.url}}')">
+        <header class="masthead" style="background-image: url('{{object.thumbnail.url}}')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
-                            <h1>{{post.title}}</h1>
+                            <h1>{{object.title}}</h1>
                             <span class="meta">
-                                {{post.jpublish}}
+                                {{object.jpublish}}
                             </span>
                         </div>
                     </div>
@@ -24,7 +24,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7 text-justify">
-                        <p>{{post.description|linebreaks}}</p>
+                        <p>{{object.description|linebreaks}}</p>
                     </div>
                 </div>
             </div>
