add the CategoryList class views instead the category view function
remove the category view function
add the CategoryList class view in views.py
set the template name and add the category to the contex in CategoryList class view
change the category function to CategoryList in urls.py
rename the category.html to category_list.html in the template
change the contex names to the default names in category_list.html in template

--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -25,7 +25,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <h3 class="alert alert-primary text-center">دسته بندی : {{ category.title }}</h3>
                     <!-- Post preview-->
-                    {% for post in posts %}
+                    {% for post in object_list %}
                         <div class="post-preview">
                             <a target="balnk" href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
@@ -46,14 +46,16 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4 pager-button">
-                        {% if posts.has_previous %}
-                            <a class="btn btn-primary text-uppercase ms-3" href="{% url 'blog:category' category.slug posts.previous_page_number %}">پست های جدید &rarr;</a>
-                        {% endif %}
-                        {% if posts.has_next %}
-                            <a class="btn btn-primary text-uppercase" href="{% url 'blog:category' category.slug posts.next_page_number %}">پست های قدیمی &larr;</a>
-                        {% endif %}
-                    </div>
+                    {% if is_paginated  %}
+                        <div class="d-flex justify-content-end mb-4 pager-button">
+                            {% if page_obj.has_previous %}
+                                <a class="btn btn-primary text-uppercase ms-3" href="{% url 'blog:category' category.slug page_obj.previous_page_number %}">پست های جدید &rarr;</a>
+                            {% endif %}
+                            {% if page_obj.has_next %}
+                                <a class="btn btn-primary text-uppercase" href="{% url 'blog:category' category.slug page_obj.next_page_number %}">پست های قدیمی &larr;</a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
             </div>
         </div>
 
