convert date to the jalali date
add extensions app to use jalali_convertor
add jpublish method to Post model to display jalali data
use jpublish (jalali date) in templates/blog (instead the publish)

--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -12,7 +12,7 @@
                         <div class="post-heading">
                             <h1>{{post.title}}</h1>
                             <span class="meta">
-                                {{post.publish}}
+                                {{post.jpublish}}
                             </span>
                         </div>
                     </div>
