--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -31,7 +31,7 @@
                             <p class="post-meta">
                                 <!-- Posted by
                                 <a target="blank" href="#!">Start Bootstrap</a> -->
-                                {{post.publish}}
+                                {{post.jpublish}}
                             </p>
                         </div>
                     {% endfor %}
