remove a useless func that gets active categories
remove the active_category function from Post model
use the .active manager instead the active_category

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -34,7 +34,7 @@
                                 {{post.jpublish}}
                             </p>
                             <div>
-                                {% for cat in post.active_category.all %}
+                                {% for cat in post.category.active %}
                                     <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
                                 {% endfor %}
                             </div>
