add the author property to Post model
add the author property ForeignKey that is related to Post model
display the author of the post in list.html
add the author to the Post display list in admin panel
add the author to the Post filter list in admin panel

--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -25,13 +25,12 @@
                     <!-- Post preview-->
                     {% for post in object_list %}
                         <div class="post-preview">
-                            <a target="balnk" href="{% url 'blog:detail' post.slug %}">
+                            <a href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
                                 <h3 class="post-subtitle">{{post.description|truncatewords:20 }}</h3>
                             </a>
                             <p class="post-meta">
-                                <!-- Posted by
-                                <a target="blank" href="#!">Start Bootstrap</a> -->
+                                نوشته شده توسط : <a href="#">{{post.author.get_full_name}}</a> در
                                 {{post.jpublish}}
                             </p>
                             <div>
