add author posts list view
add the author urls pattern in urls.py
add the author's url in list.html
add the author's fullname in post_detail.html
add the AuthorList class view to display author posts
add new author_list.html to display author posts in template

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,7 +11,10 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="post-heading">
                             <h1>{{object.title}}</h1>
-                            <span class="meta">
+                            <span class="meta mt-3">
+                                {{object.author.get_full_name}}
+                            </span>
+                            <span class="meta mt-2">
                                 {{object.jpublish}}
                             </span>
                         </div>
