--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -30,7 +30,7 @@
                                 <h3 class="post-subtitle">{{post.description|truncatewords:20 }}</h3>
                             </a>
                             <p class="post-meta">
-                                نوشته شده توسط : <a href="#">{{post.author.get_full_name}}</a> در
+                                نوشته شده توسط : <a href="{% url 'blog:author' post.author.username %}">{{post.author.get_full_name}}</a> در
                                 {{post.jpublish}}
                             </p>
                             <div>
