--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load widget_tweaks %}
 <html lang="en">
 <head>
 	<title>Login V4</title>
@@ -42,13 +43,13 @@
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
 						<span class="label-input100 myfont">نام کاربری</span>
-						{{ form.username }}
+                        {{ form.username|add_class:"input100" }}
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-31" data-validate="Password is required">
 						<span class="label-input100 myfont">رمز عبور</span>
-						{{ form.password }}
+                        {{ form.password|add_class:"input100" }}
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					
