show the form errors in the login page
show the nono_form_errors in the login.html
show the username and password files errors
fix the login page title

--- a/static/registration/login/css/rtl.css
+++ b/static/registration/login/css/rtl.css
@@ -9,3 +9,10 @@ body{
 .myfont {
     font-family: 'Sahel' !important;
 }
+
+.errors{
+    color: red;
+    padding: 20px;
+    background-color: rgb(250, 203, 203);
+    border-radius: 10px;
+}
