--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load widget_tweaks %}
 <html lang="en">
 <head>
-	<title>Login V4</title>
+	<title>ورود به حساب کاربری</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -41,15 +41,39 @@
 						ورود
 					</span>
 
+                    {% if form.non_field_errors %}
+                        <div class="errors m-b-20 fs-18">
+                           {% for error in form.non_field_errors %}
+                                <span>{{error}}</span>
+                           {% endfor %} 
+                        </div>
+                    {% endif %}
+
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
 						<span class="label-input100 myfont">نام کاربری</span>
                         {{ form.username|add_class:"input100" }}
+                        
+                        {% if form.username.errors %}
+                            <div class="errors m-b-20">
+                            {% for error in form.username.errors %}
+                                    <span>{{error}}</span>
+                            {% endfor %} 
+                            </div>
+                        {% endif %}
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-31" data-validate="Password is required">
 						<span class="label-input100 myfont">رمز عبور</span>
                         {{ form.password|add_class:"input100" }}
+                        
+                        {% if form.password.errors %}
+                            <div class="errors m-b-20">
+                            {% for error in form.password.errors %}
+                                    <span>{{error}}</span>
+                            {% endfor %} 
+                            </div>
+                        {% endif %}
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					
