--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -3,4 +3,49 @@
 {% block title %}لیست مقالات{% endblock title %}
 
 {% block main %}
+<div class="row">
+    <div class="col-12">
+      <div class="card">
+
+        <!-- /.card-header -->
+        <div class="card-body table-responsive p-0">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>عنوان</th>
+                <th>تصویر</th>
+                <th>دسته‌بندی</th>
+                <th>نویسنده</th>
+                <th>خلاصه</th>
+                <th>زمان انتشار</th>
+                <th>وضعیت</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for post in object_list  %}
+                    <tr>
+                        <td>{{post.title}}</td>
+                        <td><img width=100 src="{{post.thumbnail.url}}" alt="{{post.title}}"></td>
+                        <td>{{post.category_to_str}}</td>
+                        <td>{{post.author.get_full_name}}</td>
+                        <td>{{post.description|truncatewords:25}}</td>
+                        <td>{{post.jpublish}}</td>
+                        <td>
+                            {% if post.status == 'p' %}
+                                <span class="badge badge-success">منتشر شده</span>
+                                <a href="{% url "blog:detail" post.slug %}" target="blank" class="badge badge-primary">نمایش مقاله در سایت</a>
+                            {% else %}
+                                <span class="badge badge-danger">پیش‌نویس</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <!-- /.card-body -->
+      </div>
+      <!-- /.card -->
+    </div>
+  </div>
 {% endblock main %}
