--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -41,7 +41,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="{% url 'account:post-create' %}" class="nav-link">
                   <i class="fa fa-edit nav-icon"></i>
                   <p>افزودن مقاله</p>
                 </a>
