change the Create Post page style by crsipy tags
install the crsipy_forms app in the config/settings.py
add the crsipy module to reqyirements.txt
change the Create Post page style using crispy tags in post-create-update.html
make a title-meta block for page title in account/base.html
assign the title-meta tag as the same title tag content in home.html

--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -1,6 +1,8 @@
 {% extends 'registration/base.html' %}
 
-{% block title %}لیست مقالات{% endblock title %}
+{% block title %}{% block title-meta %}
+لیست مقالات
+{% endblock title-meta %}{% endblock title %}
 
 {% block main %}
 <div class="row">
