--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -27,7 +27,7 @@
                         <div class="post-preview">
                             <a href="{% url 'blog:detail' post.slug %}">
                                 <h2 class="post-title">{{post.title}}</h2>
-                                <h3 class="post-subtitle">{{post.description|truncatewords:20 }}</h3>
+                                <h3 class="post-subtitle">{{post.description|striptags|truncatewords:20 }}</h3>
                             </a>
                             <p class="post-meta">
                                 نوشته شده توسط : <a href="{% url 'blog:author' post.author.username %}">{{post.author.get_full_name}}</a> در
