--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -27,7 +27,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7 text-justify">
-                        <p>{{object.description|linebreaks}}</p>
+                        <p>{{object.description|safe|linebreaks}}</p>
                     </div>
                 </div>
             </div>
