--- a/static/blog/css/rtl.css
+++ b/static/blog/css/rtl.css
@@ -1,17 +1,10 @@
-@font-face {
-    font-family: Sahel;
-    src: url('Sahel.eot');
-    src: url('Sahel.eot?#iefix') format('embedded-opentype'),
-         url('Sahel.woff2') format('woff2'),
-         url('Sahel.woff') format('woff'),
-         url('Sahel.ttf') format('truetype');
-    font-weight: normal;
-  }
+@import url(fonts.css);
+
 
 body{
-    direction: rtl;
-    text-align: right;
-    font-family: "Sahel";
+    direction: rtl !important;
+    text-align: right !important;
+    font-family: Sahel !important;
 }
 
 .post-meta{
@@ -22,6 +15,8 @@ body{
     float: left !important;
 }
 
+
+/* Navbar style */
 .menu {
   display: block;
   z-index: 999999;
