--- a/templates/registration/post-create-update.html
+++ b/templates/registration/post-create-update.html
@@ -36,12 +36,14 @@
 							{{form.thumbnail|as_crispy_field}}
 							{{form.publish|as_crispy_field}}
 						</div>
-						<div class="col-6">
-							{{form.author|as_crispy_field}}
-						</div>
-						<div class="col-6">
-							{{form.status|as_crispy_field}}
-						</div>
+						{% if user.is_superuser %}
+							<div class="col-6">
+								{{form.author|as_crispy_field}}
+							</div>
+							<div class="col-6">
+								{{form.status|as_crispy_field}}
+							</div>
+						{% endif %}
 					</div>
 
 					<button type="submit" class="btn btn-success">افزودن</button>
