add the PostUpdate view
create new view PostUpdate in account views.py
set the post-update url to PostUpdate view in urls.py
link the title of posts to the update page in the home.html template

--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -26,7 +26,7 @@
             <tbody>
                 {% for post in object_list  %}
                     <tr>
-                        <td>{{post.title}}</td>
+                        <td><a href="{% url 'account:post-update' post.pk %}">{{post.title}}</a></td>
                         <td><img width=100 src="{{post.thumbnail.url}}" alt="{{post.title}}"></td>
                         <td>{{post.category_to_str}}</td>
                         <td>{{post.author.get_full_name}}</td>
