add the PostDelete view
create new view PostDelete in account views.py
set the post-delete url to PostDelete view in urls.py
add the trash button for superusers in the home.html template
create post_confirm_delete.html page in the template to confirm delete

--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -51,7 +51,11 @@
                             <i class="fa fa-edit nav-icon"></i>
                           </a>
                           <!--delete button-->
-
+                          {% if user.is_superuser %}
+                            <a href="{% url 'account:post-delete' post.pk %}" class="nav-link">
+                                <i class="fa fa-trash nav-icon"></i>
+                            </a>
+                          {% endif %}
                         </td>
                     </tr>
               {% endfor %}
