--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -50,6 +50,15 @@
       </li>
     </ul>
 
+    <!-- left navbar-->
+    <ul class="navbar-nav mr-auto-navbav">
+      <li class="nav-item">
+        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="{% url 'account:logout' %}">
+          <i class="fas fa-sign-out-alt"></i>
+        </a>
+      </li>
+    </ul>
+
   </nav>
   <!-- /.navbar -->
   {% include 'registration/sidebar.html' %}
